# minesweeperAIv2

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  TODO.md  main.py  play_minesweeper.py  pyproject.toml  requirements.txt  start_teacher.py  test.py  utils.py
agent/: cnn.py  config.py  dqn.py  preferences.py  replaybuffer.py
evaluations/: 1715008550_10000_-5.0_dqn.pt  1715939087_48800_16.1_dqn.pt  1715940936_1000001_15.0_dqn.pt  1715940936_69905_15.0_dqn.pt
game/: minesweeper_game.py
gym_env/: minesweeper_env.py
menu/: agent_menu.py  elements.py  evaluator_menu.py  menu.py  menu_config.py  minesweeper_env_menu.py  minesweeper_ui_menu.py  teacher_menu.py
minesweeper_env/: minenv.py  preferences.py
minesweeper_env/game/: config.py  generator.py  minesweeper_game.py  renderer.py  renderer_config.py  scanner.py  ui.py  utils.py
teacher/: config.py  evaluator.py  preferences.py  teacher.py
