[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "minesweeper-ai"
version = "3.0.0"
description = "Double DQN agent that learns to play Minesweeper"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "gymnasium>=1.3",
    "pygame>=2.5",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
tensorboard = ["tensorboard"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "minesweeper_env*", "teacher*", "menu*"]
